gridの変更とファイルパスの修正

--- a/src/assets/sass/project/_p-vision.scss
+++ b/src/assets/sass/project/_p-vision.scss
@@ -97,21 +97,21 @@
 }
 
 .p-vision__item:first-child::after {
-    background: url(../../../../public/assets/img/img-ozigi.png) no-repeat center center/contain;
+    background: url(../../assets/img/img-ozigi.png) no-repeat center center/contain;
 }
 .p-vision__item:nth-of-type(2)::after {
-    background: url(../../../../public/assets/img/meeting_02_mono.png) no-repeat center center/contain;
+    background: url(../../assets/img/meeting_02_mono.png) no-repeat center center/contain;
 }
 
 .p-vision__item:nth-of-type(3)::after {
-    background: url(../../../../public/assets/img/img-meeting_.png) no-repeat center center/contain;
+    background: url(../../assets/img/img-meeting_.png) no-repeat center center/contain;
     
 }
 .p-vision__item:nth-of-type(4)::after {
-    background: url(../../../../public/assets/img/videoediter_mono.png) no-repeat center center/contain;
+    background: url(../../assets/img/videoediter_mono.png) no-repeat center center/contain;
 }
 .p-vision__item:nth-of-type(5)::after {
-    background: url(.././../../../public/assets/img/img-handshake.png) no-repeat center center/contain;
+    background: url(../../assets/img/img-handshake.png) no-repeat center center/contain;
 }
 
 
