--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -818,13 +818,6 @@ img {
 	padding: 50px;
 }
 
-.p-service__item {
-	background: #fff;
-	border-radius: 15px;
-	padding: 30px 30px 100px;
-	width: calc(33% - 16px);
-}
-
 .p-service__item--content {
 	display: flex;
 	justify-content: center;
@@ -918,23 +911,23 @@ img {
 }
 
 .p-vision__item:first-child::after {
-	background: url(../../../../public/assets/img/img-ozigi.png) no-repeat center center/contain;
+	background: url(../../assets/img/img-ozigi.png) no-repeat center center/contain;
 }
 
 .p-vision__item:nth-of-type(2)::after {
-	background: url(../../../../public/assets/img/meeting_02_mono.png) no-repeat center center/contain;
+	background: url(../../assets/img/meeting_02_mono.png) no-repeat center center/contain;
 }
 
 .p-vision__item:nth-of-type(3)::after {
-	background: url(../../../../public/assets/img/img-meeting_.png) no-repeat center center/contain;
+	background: url(../../assets/img/img-meeting_.png) no-repeat center center/contain;
 }
 
 .p-vision__item:nth-of-type(4)::after {
-	background: url(../../../../public/assets/img/videoediter_mono.png) no-repeat center center/contain;
+	background: url(../../assets/img/videoediter_mono.png) no-repeat center center/contain;
 }
 
 .p-vision__item:nth-of-type(5)::after {
-	background: url(.././../../../public/assets/img/img-handshake.png) no-repeat center center/contain;
+	background: url(../../assets/img/img-handshake.png) no-repeat center center/contain;
 }
 
 .p-vision__item:nth-of-type(2n+1)::after {
@@ -1146,16 +1139,6 @@ img {
 
 .l-service__wrapper {
 	display: block;
-	margin-top: 50px;
-}
-
-.p-service__item {
-	margin: 0 auto;
-	max-width: 560px;
-	width: 100%;
-}
-
-.p-service__item + .p-service__item {
 	margin-top: 50px;
 }
 
